--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -4,6 +4,7 @@ html
         title This is a test
         link(rel="stylesheet", href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css")
         link(rel="stylesheet", href="css/main.css")
+        meta(name="viewport", content="width=device-width, initial-scale=1, user-scalable=no")
     body
         header
             img(src="images/sys-logo.png", alt="SYS Logo", width=130, class="sys-logo")
@@ -36,6 +37,7 @@ html
                     .col-md-6
                         form.subscribe
                             input(type="email", placeholder="Enter your email here...")
+                            img(src="images/no-spam.svg", alt="no-spam", class="no-spam hidden-sm hidden-xs")
                             button(type="submit")
                                 .fa.fa-check.white
                         p Mauris turpis nunc, blandit et, volutpat molestie, porta ut, ligula. Curabitur nisi. Sed magna purus, fermentum eu, tincidunt eu, varius ut, felis. Donec vitae orci sed dolor rutrum auctor. In auctor lobortis lacus.
